Add 'Proprietario' category to contacts

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                     <input type="text" id="contactSearch" class="form-control" placeholder="Cerca contatti...">
                     <select id="contactFilter" class="form-control">
                         <option value="all">Tutti</option>
+                        <option value="proprietario">Proprietario</option>
                         <option value="cliente">Clienti</option>
                         <option value="fornitore">Fornitori</option>
                         <option value="partner">Partner</option>
@@ -205,6 +206,7 @@
                 <div class="form-group">
                     <label for="contactCategory">Categoria</label>
                     <select id="contactCategory">
+                        <option value="proprietario">Proprietario</option>
                         <option value="cliente">Cliente</option>
                         <option value="fornitore">Fornitore</option>
                         <option value="partner">Partner</option>
