--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@
                         <option value="partner">Partner</option>
                     </select>
                 </div>
+                                            <div class="form-group">
+                                <label for="contactNotes">Note</label>
+                                <textarea id="contactNotes" rows="3"></textarea>
+                            </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary modal-close">Annulla</button>
                     <button type="submit" class="btn btn-primary">Salva</button>
@@ -242,6 +246,7 @@
                         <option value="bassa">Bassa</option>
                         <option value="media" selected>Media</option>
                         <option value="alta">Alta</option>
+                                                        <option value="critical">Critical</option>
                     </select>
                 </div>
                 <div class="form-group">
