Add view toggle buttons for grid and list views

--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
                         <option value="fornitore">Fornitori</option>
                         <option value="partner">Partner</option>
                     </select>
+                                <div class="view-toggle-group">
+                <button id="gridViewBtn" class="btn btn-sm btn-secondary view-toggle active" title="Vista griglia">◫</button>
+                <button id="listViewBtn" class="btn btn-sm btn-secondary view-toggle" title="Vista lista">☰</button>
+            </div>
                     <button id="addContactBtn" class="btn btn-primary">+ Aggiungi Contatto</button>
                 </div>
                 <div id="contactsList" class="items-grid">
