Make users section always visible
Removed inline style to display users section.

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             </div>
 
             <!-- Users Section (Admin Only) -->
-            <div id="usersSection" class="content-section" style="display: none;">
+            <div id="usersSection" class="content-section">
                 <div class="section-toolbar">
                     <input type="text" id="userSearch" class="form-control" placeholder="Cerca utenti...">
                     <select id="userRoleFilter" class="form-control">
