feat(html): Include bookings-handlers.js script

--- a/index.html
+++ b/index.html
@@ -583,7 +583,10 @@
     <!-- 6. Componenti -->
     <script src="js/components/calendar.js"></script>
     
-    <!-- 7. App principale (ultimo!) -->
+    <!-- 7. Handlers -->
+    <script src="js/handlers/bookings-handlers.js"></script>
+    
+    <!-- 8. App principale (ultimo!) -->
     <script src="js/app.js"></script>
 </body>
 </html>
