feat(overview): Add booking stats cards and remove registry button
- Added 3 new stat cards: Total Bookings, Today Check-ins, Today Check-outs
- Removed "File Registro" button (moved to sidebar navigation)
- Updated stats grid layout to accommodate new cards

--- a/index.html
+++ b/index.html
@@ -115,15 +115,30 @@
                             <p>Documenti</p>
                         </div>
                     </div>
-                </div>
-
-            <!-- Activity Log Button -->
-            <div class="activity-log-section">
-                <button id="activityLogBtn" class="btn btn-primary btn-full-width" onclick="Router.navigate('activityLog')">
-                    📝 File Registro
-                </button>
-            </div>
+                    <div class="stat-card">
+                        <div class="stat-icon">📅</div>
+                        <div class="stat-info">
+                            <h3 id="bookingsCount">0</h3>
+                            <p>Prenotazioni</p>
                         </div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-icon">🔔</div>
+                        <div class="stat-info">
+                            <h3 id="todayCheckIns">0</h3>
+                            <p>Check-in Oggi</p>
+                        </div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-icon">🚪</div>
+                        <div class="stat-info">
+                            <h3 id="todayCheckOuts">0</h3>
+                            <p>Check-out Oggi</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- Contacts Section -->
             <div id="contactsSection" class="content-section">
                 <div class="section-toolbar">
