--- a/index.html
+++ b/index.html
@@ -416,6 +416,12 @@
                         <option value="idee">Idee</option>
                     </select>
                 </div>
+                                <div class="form-group">
+                    <label>
+                        <input type="checkbox" id="noteUrgent">
+                        <span>🚨 Segna come urgente</span>
+                    </label>
+                </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" onclick="document.getElementById('noteModal').classList.remove('active')">Annulla</button>
                     <button type="submit" class="btn btn-primary">Salva</button>
