fix: Show Activity Log and Users menu items

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                     <input type="password" id="password" required autocomplete="current-password">
                 </div>
                 <button type="submit" class="btn btn-primary btn-full-width">Accedi</button>
-                <div id="loginError" class="error-message" style="display: none;"></div>
+                <div id="loginError" class="error-message" ></div>
             </form>
         </div>
     </div>
 
     <!-- Main Dashboard -->
-    <div id="dashboard" class="dashboard-container" style="display: none;">
+    <div id="dashboard" class="dashboard-container" >
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="sidebar-header">
@@ -60,12 +60,12 @@
                     <span>Prenotazioni</span>
                 </a>
                 <!-- Activity Log Section -->
-                <a href="#activityLog" class="nav-item" data-section="activityLog" id="activityLogNavItem" style="display: none;">
+                <a href="#activityLog" class="nav-item" data-section="activityLog" id="activityLogNavItem" >
                     <span class="nav-icon">📋</span>
                     <span>Registro</span>
                 </a>
                 <!-- Users Section (Admin Only) -->
-                <a href="#users" class="nav-item" data-section="users" id="usersNavItem" style="display: none;">
+                <a href="#users" class="nav-item" data-section="users" id="usersNavItem" >
                     <span class="nav-icon">🔐</span>
                     <span>Utenti</span>
                 </a>
@@ -378,7 +378,7 @@
                 </div>
                 
                 <!-- Lista allegati esistenti (in modalità edit) -->
-                <div id="taskAttachmentsList" style="display: none;">
+                <div id="taskAttachmentsList" >
                     <label>Allegati attuali:</label>
                     <div id="taskCurrentAttachments" class="attachments-list"></div>
                 </div>
