--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
     <div id="noteModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Nuova Nota</h2>
+                <h2 id="noteModalTitle">Nuova Nota</h2>
                 <button class="modal-close" onclick="document.getElementById('noteModal').classList.remove('active')">&times;</button>
             </div>
             <form id="noteForm">
@@ -416,7 +416,7 @@
                         <option value="idee">Idee</option>
                     </select>
                 </div>
-                                <div class="form-group">
+                <div class="form-group">
                     <label>
                         <input type="checkbox" id="noteUrgent">
                         <span>🚨 Segna come urgente</span>
