feat: Migliora Overview con cards cliccabili e preview dati
- Fix contrasto pulsante 'Annulla' nei modal (visibile in dark mode)
- Rende stat-card cliccabili con navigazione diretta alle sezioni
- Aggiunge hover effect con freccia e transform
- Tasks preview: mostra top 3 per priorità (critical, alta, media)
- Notes preview: mostra 3 note più recenti
- Bookings preview: mostra prossimi 3 check-in
- Badges colorati per priorità task
- Preview responsiva con ellipsis per testi lunghi
- Migliora UX con feedback visivo su hover/active

--- a/index.html
+++ b/index.html
@@ -97,49 +97,52 @@
             <!-- Overview Section -->
             <div id="overviewSection" class="content-section active">
                 <div class="stats-grid">
-                    <div class="stat-card">
+                    <div class="stat-card" onclick="Router.navigate('contacts')">
                         <div class="stat-icon">👥</div>
                         <div class="stat-info">
                             <h3 id="contactsCount">0</h3>
                             <p>Contatti</p>
                         </div>
                     </div>
-                    <div class="stat-card">
+                    <div class="stat-card" onclick="Router.navigate('tasks')">
                         <div class="stat-icon">✓</div>
                         <div class="stat-info">
                             <h3 id="tasksCount">0</h3>
                             <p>Task Attivi</p>
+                            <div id="tasksPreview" class="stat-preview"></div>
                         </div>
                     </div>
-                    <div class="stat-card">
+                    <div class="stat-card" onclick="Router.navigate('notes')">
                         <div class="stat-icon">📝</div>
                         <div class="stat-info">
                             <h3 id="notesCount">0</h3>
                             <p>Note</p>
+                            <div id="notesPreview" class="stat-preview"></div>
                         </div>
                     </div>
-                    <div class="stat-card">
+                    <div class="stat-card" onclick="Router.navigate('documents')">
                         <div class="stat-icon">📄</div>
                         <div class="stat-info">
                             <h3 id="documentsCount">0</h3>
                             <p>Documenti</p>
                         </div>
                     </div>
-                    <div class="stat-card">
+                    <div class="stat-card" onclick="Router.navigate('bookings')">
                         <div class="stat-icon">📅</div>
                         <div class="stat-info">
                             <h3 id="bookingsCount">0</h3>
                             <p>Prenotazioni</p>
+                            <div id="bookingsPreview" class="stat-preview"></div>
                         </div>
                     </div>
-                    <div class="stat-card">
+                    <div class="stat-card" onclick="Router.navigate('bookings')">
                         <div class="stat-icon">🔔</div>
                         <div class="stat-info">
                             <h3 id="todayCheckIns">0</h3>
                             <p>Check-in Oggi</p>
                         </div>
                     </div>
-                    <div class="stat-card">
+                    <div class="stat-card" onclick="Router.navigate('bookings')">
                         <div class="stat-icon">🚺</div>
                         <div class="stat-info">
                             <h3 id="todayCheckOuts">0</h3>
