feat: Interactive action menu for calendar date selection
PROBLEMA RISOLTO:
- Prima: caselle blu ma non interattive, nessuna azione dopo selezione
- Ora: sistema completo con menu contestuale e azioni multiple

SISTEMA INTEGRATO IMPLEMENTATO:

1. SELEZIONE DATE (2-step Airbnb):
   ✅ Click prima data → check-in (blu + 📥)
   ✅ Click seconda data → check-out (blu + 📤)
   ✅ Range colorato tra le date
   ✅ Conteggio notti in tempo reale

2. MENU AZIONI CONTESTUALE:
   ✅ Appare dopo selezione completa
   ✅ Riepilogo date + notti selezionate
   ✅ 4 azioni disponibili:
      - 📅 Nuova Prenotazione (apre modal con date pre-compilate)
      - 🔒 Blocca Date (apre modal blocco con date pre-compilate)
      - ✏️ Modifica Prenotazione (se esiste overlap)
      - 🗑️ Elimina Prenotazione (se esiste overlap)

3. LOGICA INTELLIGENTE:
   ✅ Rileva automaticamente prenotazioni esistenti nel range
   ✅ Mostra azioni Modifica/Elimina solo se overlap rilevato
   ✅ Chiusura automatica menu dopo azione
   ✅ Reset selezione dopo ogni azione

4. FEEDBACK VISIVO COMPLETO:
   ✅ Pannello riepilogo con date formattate
   ✅ Badge notti con icona 🌙
   ✅ Pulsanti azione con icone e descrizioni
   ✅ Hover effects su ogni azione
   ✅ Animazione slide-in modal

5. PULIZIA INTERFACCIA:
   ✅ Rimosso pulsante "Crea Prenotazione" diretto (ora via menu)
   ✅ Summary panel compatto (solo "Scegli Azione")
   ✅ Click prenotazione esistente → dettagli (non interferisce)

INTERAZIONE COMPLETA:
1. Seleziona check-in (click data)
2. Seleziona check-out (click data successiva)
3. Appare summary con "Scegli Azione"
4. Click "Scegli Azione" → menu contestuale
5. Scegli azione desiderata:
   - Nuova Prenotazione → modal prenotazione
   - Blocca Date → modal blocco
   - Modifica (se esiste) → modal modifica
   - Elimina (se esiste) → conferma eliminazione
6. Reset automatico selezione

FILES MODIFIED:
- js/components/calendar.js: menu logic, overlap detection, action handlers
- index.html: calendarActionMenu modal HTML


--- a/index.html
+++ b/index.html
@@ -1246,6 +1246,61 @@
         </div>
     </div>
 
+    <!-- Calendar Action Menu Modal -->
+    <div id="calendarActionMenu" class="modal calendar-action-modal">
+        <div class="modal-content action-menu-content">
+            <div class="modal-header">
+                <h2>Cosa vuoi fare?</h2>
+                <button class="modal-close" onclick="CalendarComponent.closeActionMenu()">&times;</button>
+            </div>
+            <div class="action-menu-summary">
+                <div class="summary-dates">
+                    <span class="summary-label">Check-in:</span>
+                    <strong id="actionMenuCheckIn">-</strong>
+                    <span class="summary-separator">→</span>
+                    <span class="summary-label">Check-out:</span>
+                    <strong id="actionMenuCheckOut">-</strong>
+                </div>
+                <div class="summary-nights">
+                    <span class="nights-badge" id="actionMenuNights">0 notti</span>
+                </div>
+            </div>
+            <div class="action-menu-buttons">
+                <button class="action-btn action-btn-primary" onclick="CalendarComponent.actionNewBooking()">
+                    <span class="action-icon">📅</span>
+                    <span class="action-text">
+                        <strong>Nuova Prenotazione</strong>
+                        <small>Crea una prenotazione per queste date</small>
+                    </span>
+                </button>
+                <button class="action-btn action-btn-secondary" onclick="CalendarComponent.actionBlockDates()">
+                    <span class="action-icon">🔒</span>
+                    <span class="action-text">
+                        <strong>Blocca Date</strong>
+                        <small>Rendi non disponibili queste date</small>
+                    </span>
+                </button>
+                <div id="existingBookingActions" style="display: none;">
+                    <hr style="margin: 1rem 0; border: none; border-top: 1px solid var(--border-color);">
+                    <button class="action-btn action-btn-edit" onclick="CalendarComponent.actionEditBooking()">
+                        <span class="action-icon">✏️</span>
+                        <span class="action-text">
+                            <strong>Modifica Prenotazione</strong>
+                            <small>Modifica la prenotazione esistente</small>
+                        </span>
+                    </button>
+                    <button class="action-btn action-btn-danger" onclick="CalendarComponent.actionDeleteBooking()">
+                        <span class="action-icon">🗑️</span>
+                        <span class="action-text">
+                            <strong>Elimina Prenotazione</strong>
+                            <small>Rimuovi completamente la prenotazione</small>
+                        </span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- User Modal (Admin Only) -->
     <div id="userModal" class="modal">
         <div class="modal-content">
