feat: Sistema Backup Automatico con scheduler periodico
✨ Features:
- AutoBackupService con scheduler setInterval (daily/weekly)
- Backup automatici salvati in localStorage con retention policy (max 7)
- UI completa in Settings per configurazione e gestione
- Lista backup disponibili con azioni: Scarica, Ripristina, Elimina
- Stats real-time: stato, ultimo backup, prossimo backup, storage usato

🔄 Smart Scheduler:
- Frequenza configurabile: giornaliero (24h) o settimanale (7 giorni)
- Auto-start all'abilitazione
- Esecuzione immediata se ultimo backup > frequenza
- Pulizia automatica backup vecchi (mantiene ultimi 7)

💾 Storage:
- localStorage key: autobackup_list (array backup)
- localStorage key: autobackup_config (configurazione)
- Ogni backup include: timestamp, stats, dati completi
- Formato compatibile con BackupModule esistente

📱 UI Settings:
- Toggle Abilita/Disabilita
- Select frequenza (daily/weekly)
- Bottone Esegui Ora per backup manuale immediato
- Cards lista backup con metadata e azioni

💡 Impact:
- Zero perdita dati con backup periodici automatici
- Nessun intervento manuale richiesto
- Restore rapido da qualsiasi backup salvato
- Storage intelligente con pulizia automatica

📝 Files:
- js/services/AutoBackupService.js: NEW service completo
- js/app.js: +render/save/manage methods per auto-backup
- index.html: +UI section in Settings, +script import

--- a/index.html
+++ b/index.html
@@ -752,6 +752,43 @@
                     </div>
                 </div>
 
+                <!-- Auto-Backup Settings -->
+                <div class="settings-card">
+                    <h2>💾 Backup Automatico</h2>
+                    <p class="text-secondary">Salvataggio automatico periodico dei dati in localStorage</p>
+                    
+                    <div class="form-group">
+                        <label>
+                            <input type="checkbox" id="autoBackupEnabled"> Abilita Backup Automatico
+                        </label>
+                        <small>Crea backup automatici in locale senza intervento manuale</small>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Frequenza Backup</label>
+                        <select id="autoBackupFrequency" class="form-control">
+                            <option value="daily">Giornaliero (ogni 24 ore)</option>
+                            <option value="weekly">Settimanale (ogni 7 giorni)</option>
+                        </select>
+                    </div>
+
+                    <div id="autoBackupStats" class="backup-stats" style="margin-top: 1rem; padding: 1rem; background: #f5f5f5; border-radius: 8px;">
+                        <!-- Stats popolate da JS -->
+                    </div>
+
+                    <div id="autoBackupList" style="margin-top: 1rem;">
+                        <h3 style="font-size: 1rem; margin-bottom: 0.5rem;">Backup Automatici Disponibili</h3>
+                        <div id="autoBackupListContent">
+                            <!-- Lista backup popolata da JS -->
+                        </div>
+                    </div>
+
+                    <div class="form-actions">
+                        <button class="btn btn-secondary" id="runBackupNowBtn">▶️ Esegui Ora</button>
+                        <button class="btn btn-primary" id="saveAutoBackupBtn">💾 Salva Configurazione</button>
+                    </div>
+                </div>
+
                 <!-- Notification Rules -->
                 <div class="settings-card">
                     <h2>🔔 Regole Notifiche</h2>
@@ -1739,6 +1776,7 @@
     <!-- 5b. Services -->
     <script src="js/services/TelegramService.js"></script>
     <script src="js/services/EmailService.js"></script>
+    <script src="js/services/AutoBackupService.js"></script>
     
     <!-- 6. Componenti -->
     <script src="js/components/calendar.js"></script>
