--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
         <aside class="sidebar">
             <div class="sidebar-header">
                 <h2>Dashboard</h2>
+                <div class="property-selector">
+                    <select id="propertySelector" class="property-select">
+                        <option value="">Caricamento...</option>
+                    </select>
+                </div>
                 <span id="userDisplay" class="user-badge"></span>
             </div>
             <nav class="sidebar-nav">
@@ -821,9 +826,79 @@
 
                     <button class="btn btn-primary" id="saveNotificationRulesBtn">💾 Salva Regole</button>
                 </div>
+
+                <!-- Properties Management -->
+                <div class="settings-card">
+                    <h2>🏠 Gestione Proprietà</h2>
+                    <p class="text-secondary">Aggiungi e gestisci più appartamenti/case vacanza</p>
+                    
+                    <div class="form-actions" style="margin-bottom: 1rem;">
+                        <button class="btn btn-primary" id="addPropertyBtn">➕ Nuova Proprietà</button>
+                    </div>
+
+                    <div id="propertiesList" class="properties-list">
+                        <!-- Lista properties popolata da JS -->
+                    </div>
+                </div>
             </div>
 
         </main>
+    </div>
+
+    <!-- Property Modal -->
+    <div id="propertyModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 id="propertyModalTitle">Nuova Proprietà</h2>
+                <button class="modal-close" onclick="document.getElementById('propertyModal').classList.remove('active')">&times;</button>
+            </div>
+            <div class="modal-body">
+                <form id="propertyForm">
+                    <div class="form-group">
+                        <label for="propertyName">Nome Proprietà *</label>
+                        <input type="text" id="propertyName" required placeholder="Es: Appartamento Centro">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="propertyDescription">Descrizione</label>
+                        <textarea id="propertyDescription" rows="3" placeholder="Descrizione opzionale..."></textarea>
+                    </div>
+
+                    <fieldset class="form-section">
+                        <legend>📍 Indirizzo</legend>
+                        <div class="form-group">
+                            <label for="propertyStreet">Via</label>
+                            <input type="text" id="propertyStreet" placeholder="Via Roma, 123">
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="propertyCity">Città</label>
+                                <input type="text" id="propertyCity" placeholder="Milano">
+                            </div>
+                            <div class="form-group">
+                                <label for="propertyZip">CAP</label>
+                                <input type="text" id="propertyZip" placeholder="20100">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="propertyCountry">Paese</label>
+                            <input type="text" id="propertyCountry" value="Italia">
+                        </div>
+                    </fieldset>
+
+                    <div class="form-group">
+                        <label for="propertyColor">Colore Identificativo</label>
+                        <input type="color" id="propertyColor" value="#3b82f6">
+                        <small>Utilizzato nei grafici e nelle visualizzazioni</small>
+                    </div>
+
+                    <div class="modal-actions">
+                        <button type="button" class="btn btn-secondary" onclick="document.getElementById('propertyModal').classList.remove('active')">Annulla</button>
+                        <button type="submit" class="btn btn-primary">Salva</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 
     <!-- Contact Modal -->
@@ -1765,6 +1840,7 @@
     <script src="js/modules/import-csv.js"></script>
     <script src="js/modules/notes.js"></script>
     <script src="js/modules/documents.js"></script>
+    <script src="js/modules/properties.js"></script>
     <script src="js/modules/bookings.js"></script>
     <script src="js/modules/cleaning.js"></script>
     <script src="js/modules/maintenance.js"></script>
