feat: Property features complete - Stats, Colors, Filters
✨ Features Implementate:

1️⃣ **Dashboard Stats Aggregate**
   - Sezione Overview: totali globali (properties, bookings, revenue)
   - Cards breakdown per ogni property con stats individuali
   - Colore property come border-left delle cards
   - Auto-nasconde se nessuna property presente

2️⃣ **Calendar Color Coding**
   - Bookings colorati con colore della property associata
   - Legenda colori sotto calendario con tutte le properties
   - Identificazione visiva immediata multi-property
   - Background e border colorati dinamicamente

3️⃣ **Filtro Property esteso**
   - Cleaning: filterByProperty(cleanings, propertyId)
   - Maintenance: filterByProperty(maintenances, propertyId)
   - Dropdown filtra bookings + cleaning + maintenance
   - Comportamento unificato: null = tutte, id = specifica

🎨 UI/UX:
- Legenda calendario: flex wrap responsive
- Stats cards: border colorato per property
- Color badge con trasparenza per icons

📝 Files Modified:
- js/app.js: +updatePropertiesStats, +filtri cleaning/maintenance
- js/modules/cleaning.js: +filterByProperty
- js/modules/maintenance.js: +filterByProperty
- js/components/calendar.js: +colori property, +renderPropertiesLegend
- styles.css: +calendar-legend styles
- index.html: +propertiesStatsSection

💡 Design:
- Meccanica completa prima dell'estetica
- Vista unificata con identificazione visiva
- Filtri opzionali ma potenti

--- a/index.html
+++ b/index.html
@@ -186,6 +186,14 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Properties Stats Section (se ci sono properties) -->
+                <div id="propertiesStatsSection" style="margin-top: 2rem; display: none;">
+                    <h2 style="margin-bottom: 1rem;">📊 Statistiche per Proprietà</h2>
+                    <div id="propertiesStatsGrid" class="stats-grid">
+                        <!-- Popolato dinamicamente da JS -->
+                    </div>
+                </div>
             </div>
 
             <!-- Contacts Section -->
