feat: Smart Notification System - FASE 1 & 2
✨ FASE 1 - Foundation Completata:

**Property Contacts Mapping**
- Aggiunti contacts:{cleaning:[], maintenance:[], owner, emergency:[]} a properties
- PropertiesModule.updateContacts() per gestire assegnazioni
- PropertiesModule.getContactsWithDetails() resolve contactId → full contact object

**Contact Roles & Preferences**
- Aggiunto roles:[] a contacts (cleaner, maintenance, owner, emergency)
- Aggiunto notificationPreferences:{telegram, email, sms} a contacts
- Telegram: {enabled, chatId}
- Email: {enabled, address}
- SMS: {enabled, phone} (future)

**Migrazione Automatica**
- Properties esistenti: aggiunti contacts:{}
- Contacts esistenti: aggiunti roles:[], notificationPreferences:{}
- Email default enabled se contatto ha email

✨ FASE 2 - NotificationRouter Completata:

**Smart Routing Service** (js/services/NotificationRouter.js)
- NotificationRouter.send({event, propertyId, targetRoles, channels, data})
- Risolve contatti target da property + roles
- Smista su Telegram/Email in base a preferenze contatto
- Supporto multi-channel per contact

**Pattern Estendibile**
- Event types: BOOKING_CREATED, CLEANING_CREATED, MAINTENANCE_URGENT, etc
- Target roles: CLEANING, MAINTENANCE, OWNER, EMERGENCY, ALL
- Channels: TELEGRAM, EMAIL, SMS (future)
- Auto-genera messaggi contestuali per ogni evento

**Architettura**
- resolveTargetContacts() - raccoglie contatti giusti
- sendTelegram/sendEmail() - verifica preferenze prima invio
- generateMessage() - messaggi intelligenti per evento
- Set per evitare duplicati multi-role

📝 Files Modified:
- js/modules/properties.js: +contacts field, +updateContacts, +getContactsWithDetails, +migration
- js/modules/contacts.js: +roles, +notificationPreferences, +migration
- js/services/NotificationRouter.js: NEW - Smart routing service
- index.html: +NotificationRouter.js script

🎯 Next Steps:
- FASE 3: UI per configurare contacts property + preferences
- FASE 4: Integrare NotificationRout

--- a/index.html
+++ b/index.html
@@ -1860,6 +1860,7 @@
     <!-- 5b. Services -->
     <script src="js/services/TelegramService.js"></script>
     <script src="js/services/EmailService.js"></script>
+    <script src="js/services/NotificationRouter.js"></script>
     <script src="js/services/AutoBackupService.js"></script>
     
     <!-- 6. Componenti -->
